# meteor_engine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp  resource.rc
.github/workflows/: doxygen.yml
docs/: CNAME  annotated.html  annotated_dup.js  classes.html  dir_0043d90d882a0a7ee1bac710d7736638.html  dir_0043d90d882a0a7ee1bac710d7736638.js  dir_006ab638b5d2a555ef5866ec5f1e1b3b.html  dir_006ab638b5d2a555ef5866ec5f1e1b3b.js  dir_01b534ad341ee3cc33248cb0ad96ea8e.html  dir_02d2960b2052ee79990b517bba6c8e26.html  dir_02f90f0b7edda1e1e9afd61366f22e0c.html  dir_04c82f6c838463b2c340ec6c855977bd.html  dir_0b49eb4c9c69dc06509643b1f8869aab.html  dir_0b49eb4c9c69dc06509643b1f8869aab.js  dir_11b67e4d5e77e5d286f637778f7af747.html  dir_11b67e4d5e77e5d286f637778f7af747.js  dir_17ad820ec12b2a3a505f48d898d2e313.html  dir_1addb44945acb2f5e88c6cf7ecc4066f.html  dir_1addb44945acb2f5e88c6cf7ecc4066f.js  dir_1c8264961bad02a4a98f0ebfb022e6cd.html  dir_1e2d094a16a8ff22884001a9f56c2a09.html  dir_25296997bcc7e2f857b27479e81c0a8d.js  dir_25ab4d2cf15583f0ba37e5c3778e75b0.html  dir_25ab4d2cf15583f0ba37e5c3778e75b0.js  dir_2721b4ba922f6ed872d54ee62d28af86.html  dir_2721b4ba922f6ed872d54ee62d28af86.js  dir_28b6f95e0396a935cb6ebbe0562f0f4f.html  dir_28b6f95e0396a935cb6ebbe0562f0f4f.js  dir_2e8fe5ae7fbd136a41369fc4af2b0b47.html  dir_34ebc127bbee9e18ddc127c16dadc06f.html  dir_36f83b409547a65b5765ecbd98f313e2.html  dir_38cff2b72b8049eff0a424e60f586c74.html  dir_38cff2b72b8049eff0a424e60f586c74.js  dir_3b4715ad4631c35dae4b671099c13bfc.html  dir_3b4715ad4631c35dae4b671099c13bfc.js  dir_3c65b253043ad4f405821554a703f3a5.html  dir_3cf6a800e21f8718e9dda3a8ba36a215.html  dir_3cf6a800e21f8718e9dda3a8ba36a215.js  dir_3fb1e06cda21fb906f1fbc691dd4c043.html  dir_41c0471e515672732e24a821d913b1e3.html  (+202 more)
docs/d0/d00/: class_m_add_audio_source_item.html
docs/d0/d02/: windowing_8cpp.html
docs/d0/d0a/: _m_material_asset_8h.html  _m_material_asset_8h.js  _m_material_asset_8h_source.html
docs/d0/d16/: menubartree_8cpp.html
docs/d0/d19/: class_m_skybox_entity.html  class_m_skybox_entity.js
docs/d0/d2a/: class_m_editor_inspector_window-members.html
docs/d0/d2e/: class_m_scene_asset.html  class_m_scene_asset.js
docs/d0/d2f/: procedural__skybox__drawcall_8h.html  procedural__skybox__drawcall_8h.js  procedural__skybox__drawcall_8h_source.html
docs/d0/d38/: class_m_render_queue.html  class_m_render_queue.js
docs/d0/d3b/: struct_s_light_b_v_h_node.html
docs/d0/d3d/: create__empty__scene_8cpp.html
docs/d0/d40/: class_m_create_material_item.html
docs/d0/d41/: gizmo__stage_8cpp.html
docs/d0/d42/: editorapplication_8h.html  editorapplication_8h_source.html
docs/d0/d45/: assetmanager_8h.html  assetmanager_8h.js  assetmanager_8h_source.html
docs/d0/d47/: class_m_gizmo_stage.js
docs/d0/d48/: buffer__names_8h.html  buffer__names_8h.js  buffer__names_8h_source.html
docs/d0/d50/: class_m_window.html  class_m_window.js
docs/d0/d52/: audio__source_8h.js
docs/d0/d56/: class_m_spot_light_inspector_drawer.html  class_m_spot_light_inspector_drawer.js
docs/d0/d64/: struct_s_raycast_hit.html
docs/d0/d69/: textureassetimporter_8cpp.html
docs/d0/d6a/: fileio_8cpp.html
docs/d0/d6e/: struct_s_shader_entry.html  struct_s_shader_entry.js
docs/d0/d71/: sceneentitytypedeserializer_8cpp.html
docs/d0/d7c/: class_m_text_asset-members.html
docs/d0/d81/: class_m_scene_i_o.html
docs/d0/d85/: save__scene_8cpp.html
docs/d0/d96/: create__asset__items_8cpp.html
docs/d0/da6/: class_i_audio_source.js  (+1 more)
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_0043d90d882a0a7ee1bac710d7736638.html  dir_006ab638b5d2a555ef5866ec5f1e1b3b.html  dir_01b534ad341ee3cc33248cb0ad96ea8e.html  dir_01b534ad341ee3cc33248cb0ad96ea8e.js  dir_02d2960b2052ee79990b517bba6c8e26.html  dir_02d2960b2052ee79990b517bba6c8e26.js  dir_02f90f0b7edda1e1e9afd61366f22e0c.html  dir_02f90f0b7edda1e1e9afd61366f22e0c.js  dir_04c82f6c838463b2c340ec6c855977bd.js  dir_0b49eb4c9c69dc06509643b1f8869aab.html  dir_0b49eb4c9c69dc06509643b1f8869aab.js  dir_0c4326a9e04006e920c909a0b8c270c3.html  dir_0c4326a9e04006e920c909a0b8c270c3.js  dir_11b67e4d5e77e5d286f637778f7af747.html  dir_17ad820ec12b2a3a505f48d898d2e313.html  dir_17ad820ec12b2a3a505f48d898d2e313.js  dir_1addb44945acb2f5e88c6cf7ecc4066f.html  dir_1c8264961bad02a4a98f0ebfb022e6cd.html  dir_1c8264961bad02a4a98f0ebfb022e6cd.js  dir_1e2d094a16a8ff22884001a9f56c2a09.js  dir_25296997bcc7e2f857b27479e81c0a8d.html  dir_2721b4ba922f6ed872d54ee62d28af86.html  dir_2e8fe5ae7fbd136a41369fc4af2b0b47.js  dir_34ebc127bbee9e18ddc127c16dadc06f.html  dir_34ebc127bbee9e18ddc127c16dadc06f.js  dir_36f83b409547a65b5765ecbd98f313e2.html  dir_36f83b409547a65b5765ecbd98f313e2.js  dir_3b4715ad4631c35dae4b671099c13bfc.html  dir_3b4715ad4631c35dae4b671099c13bfc.js  dir_3c65b253043ad4f405821554a703f3a5.html  dir_3c65b253043ad4f405821554a703f3a5.js  dir_3fb1e06cda21fb906f1fbc691dd4c043.html  dir_3fb1e06cda21fb906f1fbc691dd4c043.js  dir_41c0471e515672732e24a821d913b1e3.html  dir_49140f1ddebd07b7f30cb3d7ba44cd64.html  dir_4a77c2efc91caa28a0fce3a4af8448b8.html  dir_4a77c2efc91caa28a0fce3a4af8448b8.js  (+181 more)
docs/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_4.js  classes_5.js  classes_7.js  defines_10.js  defines_6.js  defines_7.js  defines_a.js  defines_c.js  defines_e.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_11.js  enumvalues_12.js  enumvalues_14.js  enumvalues_17.js  enumvalues_2.js  (+67 more)
post-build-copy-to-bin/common/: imgui.ini
skybox/default/: default_skybox.skybox
src/: default_engine_icon_paths.h  main.cpp
src/core/: default_settings_paths.h  meteor_core.h  meteor_core_minimal.h  meteor_utils.h
src/editor/: editor_constants.h  editor_paths.h  editorapplication.cpp  editorapplication.h  meteorite.h  meteorite_minimal.h
src/player/: playerapplication.cpp  playerapplication.h
(+2721 files in other folders)
